# appdaemon-aegis

./: GEMINI.md  Makefile  README.md  lefthook.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yaml  ci.yml
appdaemon_aegis/: __init__.py  app.py
src/appdaemon_aegis/: __init__.py  app.py  payloads.py  step_dimmed_lamp.py  step_dimmed_light.py  typed_hass.py  types.py  utils.py
tests/: test_app.py  test_init.py  test_payloads.py  test_step_dimmed_lamp.py  test_step_dimmed_light.py  test_utils.py
