[tool.poetry]
name = "appdaemon-aegis"
version = "0.1.0"
description = "Strong and reliable automations for AppDaemon."
authors = ["Peter Grman <peter.grman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "appdaemon_aegis", from = "src" },
]
include = [
    { path = "src/appdaemon_aegis/py.typed" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# TODO: Revert to appdaemon = "~4.5.12" once it is released:
# appdaemon = "~4.5.12"
appdaemon = {git = "https://github.com/AppDaemon/appdaemon.git", rev = "6c666ef5d8cdec67661e908bbc814eff8af342ef"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]
