[tool.poetry]
name = "appdaemon-aegis"
version = "0.1.0"
description = "Strong and reliable automations for AppDaemon."
authors = ["Peter Grman <peter.grman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "appdaemon_aegis", from = "src" },
]
include = [
    { path = "src/appdaemon_aegis/py.typed" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# TODO: Revert to appdaemon = "~4.5.12" once it is released:
# appdaemon = "~4.5.12"
appdaemon = {git = "https://github.com/AppDaemon/appdaemon.git", rev = "6c666ef5d8cdec67661e908bbc814eff8af342ef"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
lefthook = "^1.6.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90", "SIM", "PERF"]

[tool.ruff.lint.isort]
known-first-party = ["appdaemon_aegis"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
xfail_strict = true
filterwarnings = [
    "error::DeprecationWarning",
]
